fix project button icon alignment

--- a/css/posts.less
+++ b/css/posts.less
@@ -1033,12 +1033,6 @@ ul.posts {
     &.support {
       color: @damian-green;
     }
-
-    .icon {
-      margin-right: 5px;
-      position: relative;
-      top: 2px;
-    }
   }
 
   .requests {
